@@ -1,5 +1,6 @@
 Changes 0.13.0
- * change kcapi_aead_encrypt_aio and kcapi_aead_decrypt_aio to require the
+ * change kcapi_aead_encrypt_aio, kcapi_aead_decrypt_aio,
+   kcapi_cipher_encrypt_aio and kcapi_cipher_decrypt_aio to require the
    user to provide IOVECs for input and output buffers separately
  * addition of kcapi_aead_inbuflen_enc, kcapi_aead_inbuflen_dec,
    kcapi_aead_outbuflen_enc, kcapi_aead_outbuflen_dec, kcapi_aead_getdata_input,
